fix text-align

--- a/src/app/ui/view-traduction/view-traduction.component.css
+++ b/src/app/ui/view-traduction/view-traduction.component.css
@@ -98,9 +98,8 @@
     padding-bottom: 4em;
    }
    
- .panel {
-     margin: 1em 2em;
-     padding: 1em 0.5em;
+ .panel {   
+     padding: 1em 1em;
      padding-bottom: 4em;
      background-color: rgba(2, 6, 8, 0.2); /* 0.0 - transparent */
 
@@ -153,17 +152,16 @@ div.collection {
 li {
   counter-increment: li;
   margin: 1em 0em;
-  font-size: 16px !important;
+  font-size: 15px !important;
   line-height: 1em !important;
-  text-align: center !important;
+  text-align: justify !important;
   max-width: 600px;
   margin: 1em auto !important;
+  text-align: justify;
 }
 
 ol li {
-  font-size: 16px !important;
-  text-align: center !important; 
-  
+  font-size: 16px !important;  
 }
 
 
@@ -196,4 +194,8 @@ p span{
 
 div p {
   margin: 0.5em 0.5em !important;
+}
+
+ul {
+  font-style: oblique 90deg;
 }
