--- a/src/styles.css
+++ b/src/styles.css
@@ -519,7 +519,7 @@ img {
 #pageTitle{
   display: flex;
   justify-content: center;
-  padding: 0.15em 0.5em;
+  padding: 0.1em 0.5em;
 
 }
 
